<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bolla.hw4.StatsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stats_string"
        android:id="@+id/statstextView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_search_url_text_pressed"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/correct_string"
        android:id="@+id/correctTextView"
        android:textColor="@color/abc_primary_text_material_light" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/percTextView"
            android:textColor="#44c43b" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
             />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/try_again_string"
        android:id="@+id/tryagainTextView"
        android:textColor="@color/abc_primary_text_material_light"
        android:textAlignment="center"
        android:layout_marginTop="75dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/quit_string"
            android:id="@+id/quitButton" />

        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/try_button"
            android:id="@+id/tryAgainButton"
            />
    </LinearLayout>
</LinearLayout>
